--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<div class="banner">
+<!-- <div class="banner">
   <div class="banner-table flex-column">
     <div class="flex-row">
       <div class="flex-item flex-column">
@@ -12,4 +12,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
